force-app/main/default/objects/Subscription__c/fields/Days_Of_Hold_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Days_Of_Hold_Allowed__c</fullName>
    <description>How many days Reader is allowed to hold the book.</description>
    <label>Days Of Hold Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>