force-app/main/default/objects/Subscription__c/fields/Hold_Duration__c.field-meta.xml
<CustomField>
    <fullName>Hold_Duration__c</fullName>
    <formula>IF( ISBLANK( Returned_Date__c ) ,  TODAY() ,  Returned_Date__c )  -  Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hold Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>