force-app/main/default/objects/Subscription__c/fields/Reader__c.field-meta.xml
<CustomField>
    <fullName>Reader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reader</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Reader__c.Subscription_Type__c</field>
            <operation>notEqual</operation>
            <value>One-time</value>
        </filterItems>
        <infoMessage>Error</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Reader__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>