force-app/main/default/objects/Subscription__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF
(AND(NOT(ISBLANK(Returned_Date__c)), Hold_Duration__c &lt;  Days_Of_Hold_Allowed__c ),
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green Flag&quot;),
IF
(Hold_Duration__c &lt;  Days_Of_Hold_Allowed__c,
IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Yellow Flag&quot;),
IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red Flag&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>